feat: Enhance SEO with meta tags and sitemap
Adds comprehensive SEO meta tags to index.html and generates a sitemap.xml. This improves search engine visibility and discoverability for the Sai Poorna Trading Agencies website. Also updates robots.txt to point to the new sitemap.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SAI POORNA</title>
+    
+    <!-- SEO Primary Tags -->
+    <title>SAI POORNA | Heavy Machinery Export-Import | Visakhapatnam</title>
+    <meta name="description" content="SAI POORNA TRADING AGENCIES - Leading exporter of heavy machinery, construction equipment, and agricultural tools since 2007. Global logistics and customs clearance services.">
+    <meta name="keywords" content="heavy machinery export, borehole drilling rigs, construction equipment india, agricultural machinery export, machinery sourcing visakhapatnam, sai poorna trading, import export india">
+    <meta name="author" content="Sai Poorna Trading Agencies">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://saipoornatrading.com/">
+
+    <!-- Social Media / Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://saipoornatrading.com/">
+    <meta property="og:title" content="SAI POORNA | Global Heavy Machinery Exports">
+    <meta property="og:description" content="Premium heavy machinery delivered globally. Specialized in construction, mining, and agricultural equipment since 2007.">
+    <meta property="og:image" content="https://i.ibb.co/8njkqWcn/hero-image.jpg">
+
+    <!-- Twitter Card -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://saipoornatrading.com/">
+    <meta property="twitter:title" content="SAI POORNA | Global Heavy Machinery Exports">
+    <meta property="twitter:description" content="Premium heavy machinery delivered globally. Specialized in construction, mining, and agricultural equipment since 2007.">
+    <meta property="twitter:image" content="https://i.ibb.co/8njkqWcn/hero-image.jpg">
+
+    <!-- Structured Data: Local Business & Organization -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Sai Poorna Trading Agencies",
+      "image": "https://i.ibb.co/8njkqWcn/hero-image.jpg",
+      "@id": "https://saipoornatrading.com/",
+      "url": "https://saipoornatrading.com/",
+      "telephone": "+919440283982",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "68-1-99, Mulagada, Mindi post",
+        "addressLocality": "Visakhapatnam",
+        "postalCode": "530012",
+        "addressCountry": "IN"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 17.7126,
+        "longitude": 83.2163
+      },
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday",
+          "Saturday"
+        ],
+        "opens": "09:00",
+        "closes": "18:00"
+      },
+      "sameAs": [
+        "https://wa.me/919440283982"
+      ]
+    }
+    </script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700;800&family=Montserrat:wght@300;400;500;600;700;800&family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&family=Roboto+Serif:ital,wght@0,700;0,800;1,700&display=swap" rel="stylesheet">
     <style>
@@ -154,14 +217,14 @@
 <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.4",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.13.0",
     "@google/genai": "https://esm.sh/@google/genai@^1.41.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.564.0",
+    "react/": "https://esm.sh/react@^19.2.4/",
+    "react": "https://esm.sh/react@^19.2.4",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4"
+    "lucide-react": "https://esm.sh/lucide-react@^0.564.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react-router-dom": "https://esm.sh/react-router-dom@^7.13.0"
   }
 }
 </script>
